css/hhss.css
/* ... */
/*===========================================================================================
                                WIDTH 1100px+
============================================================================================*/
@media screen and (min-width: 1100px) {
    #homehppl {
        display: block;
        padding-top: -50px;
        margin-top: -50px;
    }

    /*============================================================================
        OUR STORY / CONTACT 1100PX+
    =============================================================================*/
    .aboutcover {
        background-position: center center;
        height: 55vh;
        margin-bottom: 0;
    }
    
    .infosect {
        margin: 150px auto;
    }

    .bigbox {
        grid-template-columns: 20vw 50vw;
        grid-template-rows: auto 15vw;
        row-gap: 2vw;
        column-gap: 2vw;
    } 

    .ourimg {
        grid-area: 1 / 1 / 2 / 2;
        height: 35vw;
        overflow: hidden;
        width: 20vw;
    }

    .mbalt {
        grid-area: 1 / 2 / 2 / 3;
    }

    .mbbox {
        height: 35vw;
        width: 50vw;
    }

    .iglinkalt {
        grid-area: 2 / 1 / 3 / 2;
    }

    .iglinkalt a {
        font-size: 1.6vw;
        padding: 10% 5%;
    }

    .iglinkbox{
        text-align: right;
    }

    .palt {
        grid-area: 2 / 2 / 3 / 3;
    }
    
    /*================CONTACT BOX===========*/
    .contactbox {
        width: 50vw;
    }

    input[type=submit] {
        font-size: 1.5vw;
    }

    /*============================================================================
        ISLAND STYLE 1100PX+
    =============================================================================*/
    #trends {
        height: auto;
    }

    .trendbox {
        grid-template-columns: 50vw auto;
        grid-template-rows: auto auto;
        margin: 5vw 2.5vw 10vw;
        padding: 0;
    } 
    
    .trendimgbox {
        grid-area: 1 / 1 / 3 / 2;
        height: 40vw;
        width: 50vw;
    }
    
    .trendimglink {
        grid-area: 2 / 2 / 3 / 3;
        height: 6vw;
        width: 40vw;
    }
    
    .trendimglink a {
        font-size: 1.5vw;
        padding: 5% 2%;
    }
    
    .trendtext {
        grid-area: 1 / 2 / 2 / 3;
    }

}

